maze.lessons.maze.island.IslandMaze.scala.error
Escaper:4: error: reassignment to val
    setDirection = Direction.NORTH
                 ^Escaper:33: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^